@@ -1,5 +1,11 @@
 2007-12-12  Bastien Nocera  <hadess@hadess.net>
 
+	* en_GB.pl: Only translate counterclockwise when in en_GB,
+	same thing for the Klondike/Canfield solitaire games
+	(Closes: #490519)
+
+2007-12-12  Bastien Nocera  <hadess@hadess.net>
+
 	* en_GB.pl: Make the en_GB specific translations work again,
 	Perl != Python!
 	We don't handle multiple words, so fix the Super NES translation
